// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 1`] = `
{
  "fontStyle": "bold",
  "foreground": "#aebbff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 2`] = `
{
  "fontStyle": "bold",
  "foreground": "#8de9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 3`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 4`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 5`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 6`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 7`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 8`] = `
{
  "foreground": "#78d4ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 9`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 10`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 11`] = `
{
  "fontStyle": "bold",
  "foreground": "#4ddbe8",
}
`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 12`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 13`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 14`] = `
{
  "fontStyle": "bold",
  "foreground": "#7bdbaf",
}
`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 19`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 20`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 21`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 28`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 29`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 37`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 38`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 39`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 40`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 41`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 42`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 43`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 44`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 45`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 46`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 1`] = `"#1d1931"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 2`] = `"#bacaf8"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 3`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 4`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 5`] = `"#1a162b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 6`] = `"#151127"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 7`] = `"#151127"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 8`] = `"#151127"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 9`] = `"#482f6e"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 10`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 11`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 12`] = `"#18162b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 13`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 14`] = `"#bacaf8"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 15`] = `"#ff6b7a"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 16`] = `"#79d68c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 17`] = `"#f0d440"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 18`] = `"#66a9ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 19`] = `"#c2a9ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 20`] = `"#80e6ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 21`] = `"#a8bee4"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 22`] = `"#ff6b7a"`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 1`] = `
{
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 2`] = `
{
  "fontStyle": "bold",
  "foreground": "#75b2ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 3`] = `
{
  "foreground": "#6ebbff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 4`] = `
{
  "fontStyle": "bold",
  "foreground": "#72b0ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 5`] = `
{
  "foreground": "#80e6ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 6`] = `
{
  "fontStyle": "italic",
  "foreground": "#8ddaff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 7`] = `
{
  "foreground": "#20a09d",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 8`] = `
{
  "fontStyle": "italic",
  "foreground": "#2099a3",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 9`] = `
{
  "foreground": "#8293e1",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 10`] = `
{
  "fontStyle": "italic",
  "foreground": "#8a6ac5",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 11`] = `
{
  "foreground": "#f88d7a",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 12`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 13`] = `
{
  "fontStyle": "bold",
  "foreground": "#f88d7a",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 14`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 19`] = `
{
  "foreground": "#99e6a9",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 20`] = `
{
  "foreground": "#eea870",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 21`] = `
{
  "foreground": "#eea6b6",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 28`] = `
{
  "fontStyle": "italic",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 29`] = `
{
  "fontStyle": "italic",
  "foreground": "#4dd8f0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific token color sections 1`] = `
[
  {
    "name": "Italics - Comments, Storage, Keyword Flow",
    "scope": [
      "comment",
      "keyword.control.flow",
      "keyword.control.return",
      "storage.modifier",
    ],
    "settings": {
      "fontStyle": "italic",
    },
  },
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "foreground": "#7284a6",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#e0945a",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#bacaf8",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#e98864",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#f88d7a",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#a0a0ff",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ff6b7a",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#b0b9fb",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#c2c07d",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#c2a9ff",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ff7d8a",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "CSS Property",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "CSS ID",
    "scope": "entity.other.attribute-name.id",
    "settings": {
      "foreground": "#7fb5ff",
    },
  },
  {
    "name": "CSS Tag",
    "scope": "entity.name.tag.css",
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "CSS Punctuation",
    "scope": [
      "punctuation.definition.entity",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "CSS at-rules",
    "scope": [
      "keyword.control.at-rule",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "CSS value",
    "scope": "support.constant.property-value",
    "settings": {
      "foreground": "#f59e0b",
    },
  },
  {
    "name": "CSS pseudo selectors",
    "scope": [
      "entity.other.attribute-name.pseudo-class",
      "entity.other.attribute-name.pseudo-element",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "Inserted, Deleted, Changed",
    "scope": [
      "markup.inserted",
      "markup.deleted",
      "markup.changed",
    ],
    "settings": {
      "foreground": "#80f0e6",
    },
  },
  {
    "name": "Regular Expressions",
    "scope": [
      "string.regexp",
      "constant.character.escape",
    ],
    "settings": {
      "foreground": "#b3e666",
    },
  },
  {
    "name": "Decorators",
    "scope": [
      "tag.decorator.js",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "HTML Attributes",
    "scope": [
      "entity.other.attribute-name",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "JSON Key - Level 0",
    "scope": [
      "source.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "JSON Key - Level 1",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "JSON Key - Level 2",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "JSON Key - Level 3",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "JSON Key - Level 4",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "JSON Key - Level 5",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#ff6b7a",
    },
  },
  {
    "name": "JSON Key - Level 6",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#f0d440",
    },
  },
  {
    "name": "JSON Key - Level 7",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#f88d7a",
    },
  },
  {
    "name": "JSON Key - Level 8",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Markdown - Heading",
    "scope": [
      "heading.1.markdown",
      "heading.2.markdown",
      "heading.3.markdown",
      "heading.4.markdown",
      "heading.5.markdown",
      "heading.6.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markup - Italic, Bold",
    "scope": [
      "markup.italic",
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#bacaf8",
    },
  },
  {
    "name": "Markdown - Link",
    "scope": [
      "markup.underline.link",
      "constant.other.reference.link.markdown",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Markdown - Fenced Code Block",
    "scope": [
      "markup.fenced_code.block.markdown",
      "markup.inline.raw.string.markdown",
    ],
    "settings": {
      "foreground": "#b3e666",
    },
  },
  {
    "name": "Markup - Quote",
    "scope": "markup.quote",
    "settings": {
      "fontStyle": "italic",
    },
  },
  {
    "name": "React/Vue Components",
    "scope": [
      "entity.name.component",
      "support.class.component",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#f39686",
    },
  },
  {
    "name": "TypeScript Types",
    "scope": [
      "entity.name.type",
      "type.alias",
      "type.parameter",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "GraphQL Schema",
    "scope": [
      "type.name.graphql",
      "field.name.graphql",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "Tailwind Classes",
    "scope": [
      "entity.other.attribute-name.class.tailwind",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "React Hooks",
    "scope": [
      "support.function.react-hooks",
      "entity.name.function.hook",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#f43f5e",
    },
  },
  {
    "name": "Testing Frameworks",
    "scope": [
      "support.function.test",
      "entity.name.function.test",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Modern Frameworks",
    "scope": [
      "support.function.solid",
      "support.function.drizzle",
      "support.function.hono",
      "support.function.validation",
      "support.function.query",
      "entity.name.function.resolver",
      "support.function.macro.rust",
      "entity.name.function.go",
      "support.function.styled",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme colors snapshot 1`] = `
{
  "activityBar.activeBackground": "#1c182d",
  "activityBar.activeBorder": "#66a9ff",
  "activityBar.background": "#151127",
  "activityBar.border": "#1a162b",
  "activityBar.foreground": "#8fa5cf",
  "activityBar.inactiveForeground": "#49536b",
  "activityBarBadge.background": "#007acc",
  "activityBarBadge.foreground": "#ffffff",
  "activityBarTop.foreground": "#a8bee4",
  "activityBarTop.inactiveForeground": "#8fa5cf",
  "badge.background": "#007acc",
  "badge.foreground": "#ffffff",
  "breadcrumb.activeSelectionForeground": "#9976db",
  "breadcrumb.background": "#18162c",
  "breadcrumb.focusForeground": "#bacaf8",
  "breadcrumb.foreground": "#8fa5cf",
  "breadcrumbPicker.background": "#18162b",
  "button.background": "#2a5db4",
  "button.foreground": "#ffffff",
  "button.hoverBackground": "#366cc3",
  "button.secondaryBackground": "#23366c",
  "charts.blue": "#66a9ff",
  "charts.foreground": "#bacaf8",
  "charts.green": "#66a9ff",
  "charts.lines": "#18162c",
  "charts.orange": "#e0945a",
  "charts.purple": "#7a4db4",
  "charts.red": "#ff6b7a",
  "charts.yellow": "#f0d440",
  "chat.avatarBackground": "#2a5db4",
  "chat.avatarForeground": "#bacaf8",
  "chat.requestBorder": "#1d1931",
  "chat.slashCommandBackground": "#151127",
  "chat.slashCommandForeground": "#66a9ff",
  "checkbox.background": "#18162c",
  "checkbox.border": "#283356",
  "checkbox.foreground": "#bacaf8",
  "debugConsole.errorForeground": "#7a3a4a",
  "debugConsole.infoForeground": "#a8bee4",
  "debugConsole.sourceForeground": "#a8bee4",
  "debugConsole.warningForeground": "#cccc22",
  "debugConsoleInputIcon.foreground": "#4de0d8",
  "debugExceptionWidget.background": "#151127",
  "debugExceptionWidget.border": "#7a3a4a",
  "debugIcon.breakpointDisabledForeground": "#1d1931",
  "debugIcon.breakpointForeground": "#7a3a4a",
  "debugIcon.breakpointUnverifiedForeground": "#7a3a4a",
  "debugTokenExpression.boolean": "#e0945a",
  "debugTokenExpression.error": "#7a3a4a",
  "debugTokenExpression.name": "#80e6ff",
  "debugTokenExpression.number": "#e0945a",
  "debugTokenExpression.string": "#79d68c",
  "debugTokenExpression.value": "#bacaf8",
  "debugToolBar.background": "#151127",
  "debugView.stateLabelBackground": "#151127",
  "debugView.stateLabelForeground": "#a8bee4",
  "debugView.valueChangedHighlight": "#2a5db4ab",
  "descriptionForeground": "#a8bee4",
  "diffEditor.diagonalFill": "#2a293d",
  "diffEditor.insertedLineBackground": "#2a965720",
  "diffEditor.insertedTextBackground": "#2a965720",
  "diffEditor.removedLineBackground": "#7a3a4a21",
  "diffEditor.removedTextBackground": "#7a3a4a21",
  "diffEditor.unchangedCodeBackground": "#26243966",
  "diffEditorGutter.insertedLineBackground": "#2a965726",
  "diffEditorGutter.removedLineBackground": "#7a3a4a21",
  "diffEditorOverview.insertedForeground": "#2a965726",
  "diffEditorOverview.removedForeground": "#7a3a4a21",
  "disabledForeground": "#939bc4",
  "dropdown.background": "#18162c",
  "dropdown.foreground": "#a8bee4",
  "dropdown.listBackground": "#18162c",
  "editor.background": "#1d1931",
  "editor.findMatchBackground": "#2a5db433",
  "editor.findMatchBorder": "#f0d44080",
  "editor.findMatchHighlightBackground": "#2a5db433",
  "editor.findRangeHighlightBackground": "#66a9ff33",
  "editor.focusedStackFrameHighlightBackground": "#4de0d820",
  "editor.foldBackground": "#15112733",
  "editor.foreground": "#bacaf8",
  "editor.inactiveSelectionBackground": "#66a9ff26",
  "editor.lineHighlightBackground": "#1d1931",
  "editor.rangeHighlightBackground": "#4de0d833",
  "editor.selectionBackground": "#66a9ff33",
  "editor.selectionHighlightBackground": "#66a9ff40",
  "editor.stackFrameHighlightBackground": "#cccc2220",
  "editor.wordHighlightBackground": "#66a9ff40",
  "editor.wordHighlightStrongBackground": "#66a9ff4d",
  "editorBracketHighlight.foreground1": "#aabdc9",
  "editorBracketHighlight.foreground2": "#80e6ff",
  "editorBracketHighlight.foreground3": "#c2a9ff",
  "editorBracketHighlight.foreground4": "#ffe766",
  "editorBracketHighlight.foreground5": "#80f0e6",
  "editorBracketHighlight.foreground6": "#79d68c",
  "editorBracketHighlight.unexpectedBracket.foreground": "#7a3a4a",
  "editorBracketMatch.background": "#18162c",
  "editorBracketMatch.border": "#1d1b30",
  "editorBracketPairGuide.activeBackground1": "#aabdc9",
  "editorBracketPairGuide.activeBackground2": "#80e6ff",
  "editorBracketPairGuide.activeBackground3": "#c2a9ff",
  "editorBracketPairGuide.activeBackground4": "#ffe766",
  "editorBracketPairGuide.activeBackground5": "#80f0e6",
  "editorBracketPairGuide.activeBackground6": "#79d68c",
  "editorCodeLens.foreground": "#8fa5cf",
  "editorCursor.foreground": "#bacaf8",
  "editorError.foreground": "#ff6b7a",
  "editorGhostText.foreground": "#7284a6",
  "editorGroup.border": "#221e35",
  "editorGroup.dropBackground": "#221e35",
  "editorGroupHeader.border": "#1d1b30",
  "editorGroupHeader.noTabsBackground": "#18162c",
  "editorGroupHeader.tabsBackground": "#18162c",
  "editorGroupHeader.tabsBorder": "#151127",
  "editorGutter.addedBackground": "#233e4e",
  "editorGutter.deletedBackground": "#693447",
  "editorGutter.modifiedBackground": "#434561",
  "editorHint.foreground": "#4dd8f0",
  "editorHoverWidget.background": "#242746",
  "editorHoverWidget.border": "#2c3b61",
  "editorIndentGuide.activeBackground1": "#333751",
  "editorIndentGuide.background1": "#242237",
  "editorInfo.foreground": "#4dd8f0",
  "editorInlayHint.foreground": "#939bc4",
  "editorLightBulb.foreground": "#f0d440",
  "editorLightBulbAutoFix.foreground": "#f0d440",
  "editorLineNumber.activeForeground": "#939bc4",
  "editorLineNumber.foreground": "#7284a6",
  "editorLink.activeForeground": "#bacaf8",
  "editorMarkerNavigation.background": "#18162c",
  "editorOverviewRuler.addedForeground": "#233e4e",
  "editorOverviewRuler.border": "#221e35",
  "editorOverviewRuler.bracketMatchForeground": "#151127",
  "editorOverviewRuler.deletedForeground": "#5d3043",
  "editorOverviewRuler.errorForeground": "#ff6b7a",
  "editorOverviewRuler.findMatchForeground": "#aabdc966",
  "editorOverviewRuler.infoForeground": "#5addc1",
  "editorOverviewRuler.modifiedForeground": "#434561",
  "editorOverviewRuler.rangeHighlightForeground": "#4de0d84d",
  "editorOverviewRuler.selectionHighlightForeground": "#66a9ff40",
  "editorOverviewRuler.warningForeground": "#f0d440",
  "editorOverviewRuler.wordHighlightForeground": "#66a9ff59",
  "editorOverviewRuler.wordHighlightStrongForeground": "#66a9ff73",
  "editorPane.background": "#1d1931",
  "editorRuler.foreground": "#151127",
  "editorStickyScrollHover.background": "#66a9ff1a",
  "editorSuggestWidget.background": "#18162c",
  "editorSuggestWidget.border": "#283356",
  "editorSuggestWidget.highlightForeground": "#aabdc9",
  "editorSuggestWidget.selectedBackground": "#66a9ff4d",
  "editorWarning.foreground": "#f0d440",
  "editorWhitespace.foreground": "#1485d0",
  "editorWidget.background": "#26273e",
  "editorWidget.border": "#283356",
  "editorWidget.foreground": "#bacaf8",
  "editorWidget.resizeBorder": "#283356",
  "errorForeground": "#8fa5cf",
  "extensionBadge.remoteBackground": "#2a5db4",
  "extensionBadge.remoteForeground": "#ffffff",
  "extensionButton.prominentBackground": "#2a5db4",
  "extensionButton.prominentForeground": "#ffffff",
  "extensionButton.prominentHoverBackground": "#3c74cb",
  "focusBorder": "#007acc4d",
  "foreground": "#bacaf8",
  "gitDecoration.addedResourceForeground": "#20a09d",
  "gitDecoration.conflictingResourceForeground": "#f0d440cc",
  "gitDecoration.deletedResourceForeground": "#7a3a4a",
  "gitDecoration.ignoredResourceForeground": "#8fa5cf",
  "gitDecoration.modifiedResourceForeground": "#7fb5ff",
  "gitDecoration.renamedResourceForeground": "#20a09d",
  "gitDecoration.stageDeletedResourceForeground": "#7a3a4a",
  "gitDecoration.stageModifiedResourceForeground": "#7fb5ff",
  "gitDecoration.untrackedResourceForeground": "#20a09d",
  "gitlens.gutterBackgroundColor": "#18162c",
  "gitlens.gutterForegroundColor": "#a8bee4",
  "gitlens.gutterUncommittedForegroundColor": "#66a9ff",
  "gitlens.trailingLineForegroundColor": "#7284a6",
  "icon.foreground": "#bacaf8",
  "inlineChat.foreground": "#bacaf8",
  "inlineChatDiff.inserted": "#2a965740",
  "inlineChatDiff.removed": "#7a3a4a42",
  "inlineChatInput.background": "#1d1931",
  "input.background": "#151127",
  "input.border": "#283356",
  "input.foreground": "#bacaf8",
  "input.placeholderForeground": "#a8bee48a",
  "inputOption.activeBackground": "#7284a645",
  "inputOption.activeForeground": "#bacaf8",
  "inputValidation.errorBackground": "#7a3a4a",
  "inputValidation.errorBorder": "#7a3a4a",
  "inputValidation.errorForeground": "#7fb5ff",
  "inputValidation.infoBackground": "#7284a65c",
  "inputValidation.infoBorder": "#283356",
  "inputValidation.infoForeground": "#7fb5ff",
  "inputValidation.warningBackground": "#cccc22",
  "inputValidation.warningBorder": "#f0d440",
  "inputValidation.warningForeground": "#000000",
  "list.activeSelectionBackground": "#66a9ff33",
  "list.activeSelectionForeground": "#bacaf8",
  "list.deemphasizedForeground": "#a8bee4",
  "list.dropBackground": "#1d1931",
  "list.errorForeground": "#ff6b7a",
  "list.focusBackground": "#66a9ff40",
  "list.focusForeground": "#bacaf8",
  "list.highlightForeground": "#bacaf8",
  "list.hoverBackground": "#66a9ff1a",
  "list.hoverForeground": "#bacaf8",
  "list.inactiveSelectionBackground": "#66a9ff26",
  "list.inactiveSelectionForeground": "#bacaf8",
  "list.invalidItemForeground": "#e5a752",
  "list.warningForeground": "#cccc22",
  "listFilterWidget.background": "#151127",
  "listFilterWidget.noMatchesOutline": "#7a3a4a",
  "listFilterWidget.outline": "#2a5db4",
  "menu.background": "#18162c",
  "menu.border": "#283356",
  "menu.foreground": "#a8bee4",
  "menu.selectionBackground": "#66a9ff40",
  "menu.selectionForeground": "#d6dffb",
  "menu.separatorBackground": "#262439",
  "menubar.selectionBackground": "#66a9ff33",
  "menubar.selectionBorder": "#211f34",
  "menubar.selectionForeground": "#bacaf8",
  "merge.currentContentBackground": "#20a09d45",
  "merge.currentHeaderBackground": "#2a965726",
  "merge.incomingContentBackground": "#2a5db445",
  "merge.incomingHeaderBackground": "#2a5db4ab",
  "mergeEditor.change.background": "#2a965726",
  "mergeEditor.change.word.background": "#2a965740",
  "mergeEditor.conflict.handled.minimapOverViewRuler": "#20a09d",
  "mergeEditor.conflict.handledFocused.border": "#2a965766",
  "mergeEditor.conflict.handledUnfocused.border": "#2a965726",
  "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#f0d440",
  "mergeEditor.conflict.unhandledFocused.border": "#f0d440b0",
  "mergeEditor.conflict.unhandledUnfocused.border": "#f0d44087",
  "minimapGutter.addedBackground": "#254957",
  "minimapGutter.deletedBackground": "#74384b",
  "minimapGutter.modifiedBackground": "#494b69",
  "multiDiffEditor.border": "#1d1931",
  "multiDiffEditor.headerBackground": "#1d1931",
  "notebook.cellBorderColor": "#151127",
  "notebook.cellEditorBackground": "#18162c",
  "notebook.cellStatusBarItemHoverBackground": "#66a9ff26",
  "notebook.editorBackground": "#1d1931",
  "notebook.focusedCellBorder": "#283356",
  "notificationCenterHeader.background": "#18162c",
  "notificationLink.foreground": "#7fb5ff",
  "notifications.background": "#18162c",
  "notificationsErrorIcon.foreground": "#7a3a4a",
  "notificationsInfoIcon.foreground": "#4dd8f0",
  "notificationsWarningIcon.foreground": "#f0d440",
  "panel.background": "#18162b",
  "panel.border": "#283356",
  "panelInput.border": "#1d1b30",
  "panelStickyScroll.background": "#1d1931",
  "panelTitle.activeBorder": "#66a9ff",
  "panelTitle.activeForeground": "#8fa5cf",
  "panelTitle.inactiveForeground": "#7284a6",
  "peekView.border": "#283356",
  "peekViewEditor.background": "#18162c",
  "peekViewEditor.matchHighlightBackground": "#aabdc966",
  "peekViewResult.background": "#18162c",
  "peekViewResult.fileForeground": "#a8bee4",
  "peekViewResult.lineForeground": "#bacaf8",
  "peekViewResult.matchHighlightBackground": "#aabdc966",
  "peekViewResult.selectionBackground": "#66a9ff4d",
  "peekViewResult.selectionForeground": "#bacaf8",
  "peekViewTitle.background": "#151127",
  "peekViewTitleDescription.foreground": "#a8bee4",
  "peekViewTitleLabel.foreground": "#bacaf8",
  "pickerGroup.border": "#283356",
  "pickerGroup.foreground": "#bacaf8",
  "progressBar.background": "#2a5db4",
  "quickInput.background": "#18162c",
  "sash.hoverBorder": "#221e35",
  "scmGraph.foreground1": "#66a9ff",
  "scmGraph.foreground2": "#9976db",
  "scmGraph.foreground3": "#4dd8f0",
  "scmGraph.foreground4": "#d48ae0",
  "scmGraph.foreground5": "#e666b3",
  "scmGraph.historyItemBaseRefColor": "#4dd8f0",
  "scmGraph.historyItemHoverAdditionsForeground": "#2a9657",
  "scmGraph.historyItemHoverDefaultLabelForeground": "#bacaf8",
  "scmGraph.historyItemHoverDeletionsForeground": "#ff6b7a",
  "scmGraph.historyItemHoverLabelForeground": "#151127",
  "scmGraph.historyItemRefColor": "#66a9ff",
  "scmGraph.historyItemRemoteRefColor": "#9976db",
  "scrollbar.shadow": "#00000033",
  "scrollbarSlider.activeBackground": "#66a9ff4d",
  "scrollbarSlider.background": "#a8bee40a",
  "scrollbarSlider.hoverBackground": "#66a9ff33",
  "selection.background": "#66a9ff33",
  "settings.headerForeground": "#aabdc9",
  "sideBar.background": "#1a162b",
  "sideBar.border": "#1e1b30",
  "sideBar.dropBackground": "#1d1931",
  "sideBar.foreground": "#a8bee4",
  "sideBarSectionHeader.background": "#1e1b30",
  "sideBarSectionHeader.border": "#231f34",
  "sideBarSectionHeader.foreground": "#8fa5cf",
  "sideBarTitle.foreground": "#8fa5cf",
  "statusBar.background": "#151127",
  "statusBar.border": "#1a162b",
  "statusBar.debuggingBackground": "#482f6e",
  "statusBar.debuggingForeground": "#8fa5cf",
  "statusBar.focusBorder": "#66a9ff",
  "statusBar.foreground": "#8fa5cf",
  "statusBar.noFolderBackground": "#151127",
  "statusBarItem.activeBackground": "#66a9ff40",
  "statusBarItem.focusBorder": "#66a9ff",
  "statusBarItem.hoverBackground": "#66a9ff26",
  "statusBarItem.prominentBackground": "#66a9ff40",
  "statusBarItem.prominentHoverBackground": "#66a9ff4d",
  "statusBarItem.remoteBackground": "#66a9ff40",
  "statusBarItem.remoteHoverForeground": "#e6eeff",
  "tab.activeBackground": "#18162c",
  "tab.activeBorderTop": "#9976db",
  "tab.activeForeground": "#bacaf8",
  "tab.activeModifiedBorder": "#9976db",
  "tab.border": "#221e35",
  "tab.hoverForeground": "#bacaf8",
  "tab.inactiveBackground": "#17152b",
  "tab.inactiveForeground": "#8fa5cf",
  "tab.inactiveModifiedBorder": "#211f34",
  "tab.lastPinnedBorder": "#9976db",
  "tab.unfocusedActiveBorder": "#211f34",
  "tab.unfocusedActiveForeground": "#a8bee4",
  "tab.unfocusedActiveModifiedBorder": "#211f34",
  "tab.unfocusedHoverForeground": "#a8bee4",
  "tab.unfocusedInactiveForeground": "#8fa5cf",
  "tab.unfocusedInactiveModifiedBorder": "#221e35",
  "terminal.ansiBlack": "#151127",
  "terminal.ansiBlue": "#66a9ff",
  "terminal.ansiBrightBlack": "#939bc4",
  "terminal.ansiBrightBlue": "#7fb5ff",
  "terminal.ansiBrightCyan": "#80e6ff",
  "terminal.ansiBrightGreen": "#2a9657",
  "terminal.ansiBrightMagenta": "#c2a9ff",
  "terminal.ansiBrightRed": "#7a3a4a",
  "terminal.ansiBrightWhite": "#bacaf8",
  "terminal.ansiBrightYellow": "#ffe766",
  "terminal.ansiCyan": "#80e6ff",
  "terminal.ansiGreen": "#79d68c",
  "terminal.ansiMagenta": "#c2a9ff",
  "terminal.ansiRed": "#ff6b7a",
  "terminal.ansiWhite": "#a8bee4",
  "terminal.ansiYellow": "#f0d440",
  "terminal.background": "#18162c",
  "terminal.foreground": "#bacaf8",
  "terminal.selectionBackground": "#2a5db44d",
  "terminalCursor.background": "#1d1931",
  "terminalCursor.foreground": "#bacaf8",
  "textBlockQuote.background": "#18162c",
  "textCodeBlock.background": "#18162c",
  "textLink.activeForeground": "#99c4ff",
  "textLink.foreground": "#7fb5ff",
  "textPreformat.foreground": "#a8bee4",
  "textSeparator.foreground": "#3b394c",
  "titleBar.activeBackground": "#18162c",
  "titleBar.activeForeground": "#8fa5cf",
  "titleBar.border": "#1d1b30",
  "titleBar.inactiveBackground": "#17152b",
  "titleBar.inactiveForeground": "#56637c",
  "toolbar.activeBackground": "#1d1931",
  "toolbar.hoverBackground": "#1d1931",
  "tree.indentGuidesStroke": "#2a293d",
  "walkThrough.embeddedEditorBackground": "#18162c",
  "widget.shadow": "#0000004d",
  "window.activeBorder": "#151127",
  "window.inactiveBorder": "#151127",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme semantic token colors snapshot 1`] = `
{
  "boolean": {
    "foreground": "#eea6b6",
  },
  "class": {
    "fontStyle": "bold",
    "foreground": "#f88d7a",
  },
  "constructor": {
    "fontStyle": "bold",
    "foreground": "#8addff",
  },
  "framework.token": {
    "foreground": "#66a9ff",
  },
  "function": {
    "foreground": "#66a9ff",
  },
  "function.declaration": {
    "fontStyle": "bold",
    "foreground": "#75b2ff",
  },
  "function.defaultLibrary": {
    "foreground": "#80e6ff",
  },
  "graphql.type": {
    "fontStyle": "bold",
    "foreground": "#4ddbe8",
  },
  "method": {
    "foreground": "#6ebbff",
  },
  "method.declaration": {
    "fontStyle": "bold",
    "foreground": "#72b0ff",
  },
  "number": {
    "foreground": "#eea870",
  },
  "parameter": {
    "foreground": "#8293e1",
  },
  "parameter.readonly": {
    "fontStyle": "italic",
    "foreground": "#8a6ac5",
  },
  "property": {
    "foreground": "#20a09d",
  },
  "property.readonly": {
    "fontStyle": "italic",
    "foreground": "#2099a3",
  },
  "react.component": {
    "fontStyle": "bold",
    "foreground": "#8de9ff",
  },
  "react.hook": {
    "fontStyle": "bold",
    "foreground": "#aebbff",
  },
  "readonly": {
    "fontStyle": "italic",
    "foreground": "#4dd8f0",
  },
  "static": {
    "fontStyle": "italic",
    "foreground": "#66a9ff",
  },
  "string": {
    "foreground": "#99e6a9",
  },
  "test.describe": {
    "fontStyle": "bold",
    "foreground": "#7bdbaf",
  },
  "type": {
    "foreground": "#f88d7a",
  },
  "typescript.generic": {
    "foreground": "#78d4ff",
  },
  "variable": {
    "foreground": "#80e6ff",
  },
  "variable.defaultLibrary": {
    "foreground": "#4ddbe6",
  },
  "variable.readonly": {
    "fontStyle": "italic",
    "foreground": "#8ddaff",
  },
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme snapshot 1`] = `
{
  "colors": {
    "activityBar.activeBackground": "#1c182d",
    "activityBar.activeBorder": "#66a9ff",
    "activityBar.background": "#151127",
    "activityBar.border": "#1a162b",
    "activityBar.foreground": "#8fa5cf",
    "activityBar.inactiveForeground": "#49536b",
    "activityBarBadge.background": "#007acc",
    "activityBarBadge.foreground": "#ffffff",
    "activityBarTop.foreground": "#a8bee4",
    "activityBarTop.inactiveForeground": "#8fa5cf",
    "badge.background": "#007acc",
    "badge.foreground": "#ffffff",
    "breadcrumb.activeSelectionForeground": "#9976db",
    "breadcrumb.background": "#18162c",
    "breadcrumb.focusForeground": "#bacaf8",
    "breadcrumb.foreground": "#8fa5cf",
    "breadcrumbPicker.background": "#18162b",
    "button.background": "#2a5db4",
    "button.foreground": "#ffffff",
    "button.hoverBackground": "#366cc3",
    "button.secondaryBackground": "#23366c",
    "charts.blue": "#66a9ff",
    "charts.foreground": "#bacaf8",
    "charts.green": "#66a9ff",
    "charts.lines": "#18162c",
    "charts.orange": "#e0945a",
    "charts.purple": "#7a4db4",
    "charts.red": "#ff6b7a",
    "charts.yellow": "#f0d440",
    "chat.avatarBackground": "#2a5db4",
    "chat.avatarForeground": "#bacaf8",
    "chat.requestBorder": "#1d1931",
    "chat.slashCommandBackground": "#151127",
    "chat.slashCommandForeground": "#66a9ff",
    "checkbox.background": "#18162c",
    "checkbox.border": "#283356",
    "checkbox.foreground": "#bacaf8",
    "debugConsole.errorForeground": "#7a3a4a",
    "debugConsole.infoForeground": "#a8bee4",
    "debugConsole.sourceForeground": "#a8bee4",
    "debugConsole.warningForeground": "#cccc22",
    "debugConsoleInputIcon.foreground": "#4de0d8",
    "debugExceptionWidget.background": "#151127",
    "debugExceptionWidget.border": "#7a3a4a",
    "debugIcon.breakpointDisabledForeground": "#1d1931",
    "debugIcon.breakpointForeground": "#7a3a4a",
    "debugIcon.breakpointUnverifiedForeground": "#7a3a4a",
    "debugTokenExpression.boolean": "#e0945a",
    "debugTokenExpression.error": "#7a3a4a",
    "debugTokenExpression.name": "#80e6ff",
    "debugTokenExpression.number": "#e0945a",
    "debugTokenExpression.string": "#79d68c",
    "debugTokenExpression.value": "#bacaf8",
    "debugToolBar.background": "#151127",
    "debugView.stateLabelBackground": "#151127",
    "debugView.stateLabelForeground": "#a8bee4",
    "debugView.valueChangedHighlight": "#2a5db4ab",
    "descriptionForeground": "#a8bee4",
    "diffEditor.diagonalFill": "#2a293d",
    "diffEditor.insertedLineBackground": "#2a965720",
    "diffEditor.insertedTextBackground": "#2a965720",
    "diffEditor.removedLineBackground": "#7a3a4a21",
    "diffEditor.removedTextBackground": "#7a3a4a21",
    "diffEditor.unchangedCodeBackground": "#26243966",
    "diffEditorGutter.insertedLineBackground": "#2a965726",
    "diffEditorGutter.removedLineBackground": "#7a3a4a21",
    "diffEditorOverview.insertedForeground": "#2a965726",
    "diffEditorOverview.removedForeground": "#7a3a4a21",
    "disabledForeground": "#939bc4",
    "dropdown.background": "#18162c",
    "dropdown.foreground": "#a8bee4",
    "dropdown.listBackground": "#18162c",
    "editor.background": "#1d1931",
    "editor.findMatchBackground": "#2a5db433",
    "editor.findMatchBorder": "#f0d44080",
    "editor.findMatchHighlightBackground": "#2a5db433",
    "editor.findRangeHighlightBackground": "#66a9ff33",
    "editor.focusedStackFrameHighlightBackground": "#4de0d820",
    "editor.foldBackground": "#15112733",
    "editor.foreground": "#bacaf8",
    "editor.inactiveSelectionBackground": "#66a9ff26",
    "editor.lineHighlightBackground": "#1d1931",
    "editor.rangeHighlightBackground": "#4de0d833",
    "editor.selectionBackground": "#66a9ff33",
    "editor.selectionHighlightBackground": "#66a9ff40",
    "editor.stackFrameHighlightBackground": "#cccc2220",
    "editor.wordHighlightBackground": "#66a9ff40",
    "editor.wordHighlightStrongBackground": "#66a9ff4d",
    "editorBracketHighlight.foreground1": "#aabdc9",
    "editorBracketHighlight.foreground2": "#80e6ff",
    "editorBracketHighlight.foreground3": "#c2a9ff",
    "editorBracketHighlight.foreground4": "#ffe766",
    "editorBracketHighlight.foreground5": "#80f0e6",
    "editorBracketHighlight.foreground6": "#79d68c",
    "editorBracketHighlight.unexpectedBracket.foreground": "#7a3a4a",
    "editorBracketMatch.background": "#18162c",
    "editorBracketMatch.border": "#1d1b30",
    "editorBracketPairGuide.activeBackground1": "#aabdc9",
    "editorBracketPairGuide.activeBackground2": "#80e6ff",
    "editorBracketPairGuide.activeBackground3": "#c2a9ff",
    "editorBracketPairGuide.activeBackground4": "#ffe766",
    "editorBracketPairGuide.activeBackground5": "#80f0e6",
    "editorBracketPairGuide.activeBackground6": "#79d68c",
    "editorCodeLens.foreground": "#8fa5cf",
    "editorCursor.foreground": "#bacaf8",
    "editorError.foreground": "#ff6b7a",
    "editorGhostText.foreground": "#7284a6",
    "editorGroup.border": "#221e35",
    "editorGroup.dropBackground": "#221e35",
    "editorGroupHeader.border": "#1d1b30",
    "editorGroupHeader.noTabsBackground": "#18162c",
    "editorGroupHeader.tabsBackground": "#18162c",
    "editorGroupHeader.tabsBorder": "#151127",
    "editorGutter.addedBackground": "#233e4e",
    "editorGutter.deletedBackground": "#693447",
    "editorGutter.modifiedBackground": "#434561",
    "editorHint.foreground": "#4dd8f0",
    "editorHoverWidget.background": "#242746",
    "editorHoverWidget.border": "#2c3b61",
    "editorIndentGuide.activeBackground1": "#333751",
    "editorIndentGuide.background1": "#242237",
    "editorInfo.foreground": "#4dd8f0",
    "editorInlayHint.foreground": "#939bc4",
    "editorLightBulb.foreground": "#f0d440",
    "editorLightBulbAutoFix.foreground": "#f0d440",
    "editorLineNumber.activeForeground": "#939bc4",
    "editorLineNumber.foreground": "#7284a6",
    "editorLink.activeForeground": "#bacaf8",
    "editorMarkerNavigation.background": "#18162c",
    "editorOverviewRuler.addedForeground": "#233e4e",
    "editorOverviewRuler.border": "#221e35",
    "editorOverviewRuler.bracketMatchForeground": "#151127",
    "editorOverviewRuler.deletedForeground": "#5d3043",
    "editorOverviewRuler.errorForeground": "#ff6b7a",
    "editorOverviewRuler.findMatchForeground": "#aabdc966",
    "editorOverviewRuler.infoForeground": "#5addc1",
    "editorOverviewRuler.modifiedForeground": "#434561",
    "editorOverviewRuler.rangeHighlightForeground": "#4de0d84d",
    "editorOverviewRuler.selectionHighlightForeground": "#66a9ff40",
    "editorOverviewRuler.warningForeground": "#f0d440",
    "editorOverviewRuler.wordHighlightForeground": "#66a9ff59",
    "editorOverviewRuler.wordHighlightStrongForeground": "#66a9ff73",
    "editorPane.background": "#1d1931",
    "editorRuler.foreground": "#151127",
    "editorStickyScrollHover.background": "#66a9ff1a",
    "editorSuggestWidget.background": "#18162c",
    "editorSuggestWidget.border": "#283356",
    "editorSuggestWidget.highlightForeground": "#aabdc9",
    "editorSuggestWidget.selectedBackground": "#66a9ff4d",
    "editorWarning.foreground": "#f0d440",
    "editorWhitespace.foreground": "#1485d0",
    "editorWidget.background": "#26273e",
    "editorWidget.border": "#283356",
    "editorWidget.foreground": "#bacaf8",
    "editorWidget.resizeBorder": "#283356",
    "errorForeground": "#8fa5cf",
    "extensionBadge.remoteBackground": "#2a5db4",
    "extensionBadge.remoteForeground": "#ffffff",
    "extensionButton.prominentBackground": "#2a5db4",
    "extensionButton.prominentForeground": "#ffffff",
    "extensionButton.prominentHoverBackground": "#3c74cb",
    "focusBorder": "#007acc4d",
    "foreground": "#bacaf8",
    "gitDecoration.addedResourceForeground": "#20a09d",
    "gitDecoration.conflictingResourceForeground": "#f0d440cc",
    "gitDecoration.deletedResourceForeground": "#7a3a4a",
    "gitDecoration.ignoredResourceForeground": "#8fa5cf",
    "gitDecoration.modifiedResourceForeground": "#7fb5ff",
    "gitDecoration.renamedResourceForeground": "#20a09d",
    "gitDecoration.stageDeletedResourceForeground": "#7a3a4a",
    "gitDecoration.stageModifiedResourceForeground": "#7fb5ff",
    "gitDecoration.untrackedResourceForeground": "#20a09d",
    "gitlens.gutterBackgroundColor": "#18162c",
    "gitlens.gutterForegroundColor": "#a8bee4",
    "gitlens.gutterUncommittedForegroundColor": "#66a9ff",
    "gitlens.trailingLineForegroundColor": "#7284a6",
    "icon.foreground": "#bacaf8",
    "inlineChat.foreground": "#bacaf8",
    "inlineChatDiff.inserted": "#2a965740",
    "inlineChatDiff.removed": "#7a3a4a42",
    "inlineChatInput.background": "#1d1931",
    "input.background": "#151127",
    "input.border": "#283356",
    "input.foreground": "#bacaf8",
    "input.placeholderForeground": "#a8bee48a",
    "inputOption.activeBackground": "#7284a645",
    "inputOption.activeForeground": "#bacaf8",
    "inputValidation.errorBackground": "#7a3a4a",
    "inputValidation.errorBorder": "#7a3a4a",
    "inputValidation.errorForeground": "#7fb5ff",
    "inputValidation.infoBackground": "#7284a65c",
    "inputValidation.infoBorder": "#283356",
    "inputValidation.infoForeground": "#7fb5ff",
    "inputValidation.warningBackground": "#cccc22",
    "inputValidation.warningBorder": "#f0d440",
    "inputValidation.warningForeground": "#000000",
    "list.activeSelectionBackground": "#66a9ff33",
    "list.activeSelectionForeground": "#bacaf8",
    "list.deemphasizedForeground": "#a8bee4",
    "list.dropBackground": "#1d1931",
    "list.errorForeground": "#ff6b7a",
    "list.focusBackground": "#66a9ff40",
    "list.focusForeground": "#bacaf8",
    "list.highlightForeground": "#bacaf8",
    "list.hoverBackground": "#66a9ff1a",
    "list.hoverForeground": "#bacaf8",
    "list.inactiveSelectionBackground": "#66a9ff26",
    "list.inactiveSelectionForeground": "#bacaf8",
    "list.invalidItemForeground": "#e5a752",
    "list.warningForeground": "#cccc22",
    "listFilterWidget.background": "#151127",
    "listFilterWidget.noMatchesOutline": "#7a3a4a",
    "listFilterWidget.outline": "#2a5db4",
    "menu.background": "#18162c",
    "menu.border": "#283356",
    "menu.foreground": "#a8bee4",
    "menu.selectionBackground": "#66a9ff40",
    "menu.selectionForeground": "#d6dffb",
    "menu.separatorBackground": "#262439",
    "menubar.selectionBackground": "#66a9ff33",
    "menubar.selectionBorder": "#211f34",
    "menubar.selectionForeground": "#bacaf8",
    "merge.currentContentBackground": "#20a09d45",
    "merge.currentHeaderBackground": "#2a965726",
    "merge.incomingContentBackground": "#2a5db445",
    "merge.incomingHeaderBackground": "#2a5db4ab",
    "mergeEditor.change.background": "#2a965726",
    "mergeEditor.change.word.background": "#2a965740",
    "mergeEditor.conflict.handled.minimapOverViewRuler": "#20a09d",
    "mergeEditor.conflict.handledFocused.border": "#2a965766",
    "mergeEditor.conflict.handledUnfocused.border": "#2a965726",
    "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#f0d440",
    "mergeEditor.conflict.unhandledFocused.border": "#f0d440b0",
    "mergeEditor.conflict.unhandledUnfocused.border": "#f0d44087",
    "minimapGutter.addedBackground": "#254957",
    "minimapGutter.deletedBackground": "#74384b",
    "minimapGutter.modifiedBackground": "#494b69",
    "multiDiffEditor.border": "#1d1931",
    "multiDiffEditor.headerBackground": "#1d1931",
    "notebook.cellBorderColor": "#151127",
    "notebook.cellEditorBackground": "#18162c",
    "notebook.cellStatusBarItemHoverBackground": "#66a9ff26",
    "notebook.editorBackground": "#1d1931",
    "notebook.focusedCellBorder": "#283356",
    "notificationCenterHeader.background": "#18162c",
    "notificationLink.foreground": "#7fb5ff",
    "notifications.background": "#18162c",
    "notificationsErrorIcon.foreground": "#7a3a4a",
    "notificationsInfoIcon.foreground": "#4dd8f0",
    "notificationsWarningIcon.foreground": "#f0d440",
    "panel.background": "#18162b",
    "panel.border": "#283356",
    "panelInput.border": "#1d1b30",
    "panelStickyScroll.background": "#1d1931",
    "panelTitle.activeBorder": "#66a9ff",
    "panelTitle.activeForeground": "#8fa5cf",
    "panelTitle.inactiveForeground": "#7284a6",
    "peekView.border": "#283356",
    "peekViewEditor.background": "#18162c",
    "peekViewEditor.matchHighlightBackground": "#aabdc966",
    "peekViewResult.background": "#18162c",
    "peekViewResult.fileForeground": "#a8bee4",
    "peekViewResult.lineForeground": "#bacaf8",
    "peekViewResult.matchHighlightBackground": "#aabdc966",
    "peekViewResult.selectionBackground": "#66a9ff4d",
    "peekViewResult.selectionForeground": "#bacaf8",
    "peekViewTitle.background": "#151127",
    "peekViewTitleDescription.foreground": "#a8bee4",
    "peekViewTitleLabel.foreground": "#bacaf8",
    "pickerGroup.border": "#283356",
    "pickerGroup.foreground": "#bacaf8",
    "progressBar.background": "#2a5db4",
    "quickInput.background": "#18162c",
    "sash.hoverBorder": "#221e35",
    "scmGraph.foreground1": "#66a9ff",
    "scmGraph.foreground2": "#9976db",
    "scmGraph.foreground3": "#4dd8f0",
    "scmGraph.foreground4": "#d48ae0",
    "scmGraph.foreground5": "#e666b3",
    "scmGraph.historyItemBaseRefColor": "#4dd8f0",
    "scmGraph.historyItemHoverAdditionsForeground": "#2a9657",
    "scmGraph.historyItemHoverDefaultLabelForeground": "#bacaf8",
    "scmGraph.historyItemHoverDeletionsForeground": "#ff6b7a",
    "scmGraph.historyItemHoverLabelForeground": "#151127",
    "scmGraph.historyItemRefColor": "#66a9ff",
    "scmGraph.historyItemRemoteRefColor": "#9976db",
    "scrollbar.shadow": "#00000033",
    "scrollbarSlider.activeBackground": "#66a9ff4d",
    "scrollbarSlider.background": "#a8bee40a",
    "scrollbarSlider.hoverBackground": "#66a9ff33",
    "selection.background": "#66a9ff33",
    "settings.headerForeground": "#aabdc9",
    "sideBar.background": "#1a162b",
    "sideBar.border": "#1e1b30",
    "sideBar.dropBackground": "#1d1931",
    "sideBar.foreground": "#a8bee4",
    "sideBarSectionHeader.background": "#1e1b30",
    "sideBarSectionHeader.border": "#231f34",
    "sideBarSectionHeader.foreground": "#8fa5cf",
    "sideBarTitle.foreground": "#8fa5cf",
    "statusBar.background": "#151127",
    "statusBar.border": "#1a162b",
    "statusBar.debuggingBackground": "#482f6e",
    "statusBar.debuggingForeground": "#8fa5cf",
    "statusBar.focusBorder": "#66a9ff",
    "statusBar.foreground": "#8fa5cf",
    "statusBar.noFolderBackground": "#151127",
    "statusBarItem.activeBackground": "#66a9ff40",
    "statusBarItem.focusBorder": "#66a9ff",
    "statusBarItem.hoverBackground": "#66a9ff26",
    "statusBarItem.prominentBackground": "#66a9ff40",
    "statusBarItem.prominentHoverBackground": "#66a9ff4d",
    "statusBarItem.remoteBackground": "#66a9ff40",
    "statusBarItem.remoteHoverForeground": "#e6eeff",
    "tab.activeBackground": "#18162c",
    "tab.activeBorderTop": "#9976db",
    "tab.activeForeground": "#bacaf8",
    "tab.activeModifiedBorder": "#9976db",
    "tab.border": "#221e35",
    "tab.hoverForeground": "#bacaf8",
    "tab.inactiveBackground": "#17152b",
    "tab.inactiveForeground": "#8fa5cf",
    "tab.inactiveModifiedBorder": "#211f34",
    "tab.lastPinnedBorder": "#9976db",
    "tab.unfocusedActiveBorder": "#211f34",
    "tab.unfocusedActiveForeground": "#a8bee4",
    "tab.unfocusedActiveModifiedBorder": "#211f34",
    "tab.unfocusedHoverForeground": "#a8bee4",
    "tab.unfocusedInactiveForeground": "#8fa5cf",
    "tab.unfocusedInactiveModifiedBorder": "#221e35",
    "terminal.ansiBlack": "#151127",
    "terminal.ansiBlue": "#66a9ff",
    "terminal.ansiBrightBlack": "#939bc4",
    "terminal.ansiBrightBlue": "#7fb5ff",
    "terminal.ansiBrightCyan": "#80e6ff",
    "terminal.ansiBrightGreen": "#2a9657",
    "terminal.ansiBrightMagenta": "#c2a9ff",
    "terminal.ansiBrightRed": "#7a3a4a",
    "terminal.ansiBrightWhite": "#bacaf8",
    "terminal.ansiBrightYellow": "#ffe766",
    "terminal.ansiCyan": "#80e6ff",
    "terminal.ansiGreen": "#79d68c",
    "terminal.ansiMagenta": "#c2a9ff",
    "terminal.ansiRed": "#ff6b7a",
    "terminal.ansiWhite": "#a8bee4",
    "terminal.ansiYellow": "#f0d440",
    "terminal.background": "#18162c",
    "terminal.foreground": "#bacaf8",
    "terminal.selectionBackground": "#2a5db44d",
    "terminalCursor.background": "#1d1931",
    "terminalCursor.foreground": "#bacaf8",
    "textBlockQuote.background": "#18162c",
    "textCodeBlock.background": "#18162c",
    "textLink.activeForeground": "#99c4ff",
    "textLink.foreground": "#7fb5ff",
    "textPreformat.foreground": "#a8bee4",
    "textSeparator.foreground": "#3b394c",
    "titleBar.activeBackground": "#18162c",
    "titleBar.activeForeground": "#8fa5cf",
    "titleBar.border": "#1d1b30",
    "titleBar.inactiveBackground": "#17152b",
    "titleBar.inactiveForeground": "#56637c",
    "toolbar.activeBackground": "#1d1931",
    "toolbar.hoverBackground": "#1d1931",
    "tree.indentGuidesStroke": "#2a293d",
    "walkThrough.embeddedEditorBackground": "#18162c",
    "widget.shadow": "#0000004d",
    "window.activeBorder": "#151127",
    "window.inactiveBorder": "#151127",
  },
  "name": "Tokyo Modern",
  "semanticHighlighting": true,
  "semanticTokenColors": {
    "boolean": {
      "foreground": "#eea6b6",
    },
    "class": {
      "fontStyle": "bold",
      "foreground": "#f88d7a",
    },
    "constructor": {
      "fontStyle": "bold",
      "foreground": "#8addff",
    },
    "framework.token": {
      "foreground": "#66a9ff",
    },
    "function": {
      "foreground": "#66a9ff",
    },
    "function.declaration": {
      "fontStyle": "bold",
      "foreground": "#75b2ff",
    },
    "function.defaultLibrary": {
      "foreground": "#80e6ff",
    },
    "graphql.type": {
      "fontStyle": "bold",
      "foreground": "#4ddbe8",
    },
    "method": {
      "foreground": "#6ebbff",
    },
    "method.declaration": {
      "fontStyle": "bold",
      "foreground": "#72b0ff",
    },
    "number": {
      "foreground": "#eea870",
    },
    "parameter": {
      "foreground": "#8293e1",
    },
    "parameter.readonly": {
      "fontStyle": "italic",
      "foreground": "#8a6ac5",
    },
    "property": {
      "foreground": "#20a09d",
    },
    "property.readonly": {
      "fontStyle": "italic",
      "foreground": "#2099a3",
    },
    "react.component": {
      "fontStyle": "bold",
      "foreground": "#8de9ff",
    },
    "react.hook": {
      "fontStyle": "bold",
      "foreground": "#aebbff",
    },
    "readonly": {
      "fontStyle": "italic",
      "foreground": "#4dd8f0",
    },
    "static": {
      "fontStyle": "italic",
      "foreground": "#66a9ff",
    },
    "string": {
      "foreground": "#99e6a9",
    },
    "test.describe": {
      "fontStyle": "bold",
      "foreground": "#7bdbaf",
    },
    "type": {
      "foreground": "#f88d7a",
    },
    "typescript.generic": {
      "foreground": "#78d4ff",
    },
    "variable": {
      "foreground": "#80e6ff",
    },
    "variable.defaultLibrary": {
      "foreground": "#4ddbe6",
    },
    "variable.readonly": {
      "fontStyle": "italic",
      "foreground": "#8ddaff",
    },
  },
  "tokenColors": [
    {
      "name": "Italics - Comments, Storage, Keyword Flow",
      "scope": [
        "comment",
        "keyword.control.flow",
        "keyword.control.return",
        "storage.modifier",
      ],
      "settings": {
        "fontStyle": "italic",
      },
    },
    {
      "name": "Comment",
      "scope": [
        "comment",
        "punctuation.definition.comment",
      ],
      "settings": {
        "foreground": "#7284a6",
      },
    },
    {
      "name": "Number, Boolean, Undefined, Null",
      "scope": [
        "constant.numeric",
        "constant.language",
        "variable.other.constant",
      ],
      "settings": {
        "foreground": "#e0945a",
      },
    },
    {
      "name": "String, Symbols",
      "scope": [
        "string",
        "constant.other.symbol",
        "constant.other.key",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Colors",
      "scope": [
        "constant.other.color",
      ],
      "settings": {
        "foreground": "#bacaf8",
      },
    },
    {
      "name": "Invalid",
      "scope": [
        "invalid",
      ],
      "settings": {
        "foreground": "#e98864",
      },
    },
    {
      "name": "Storage Type",
      "scope": "storage.type",
      "settings": {
        "foreground": "#f88d7a",
      },
    },
    {
      "name": "Storage - modifier, var, const, let",
      "scope": [
        "storage.modifier",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Interpolation, PHP tags",
      "scope": [
        "punctuation.definition.template-expression",
        "punctuation.section.embedded",
      ],
      "settings": {
        "foreground": "#a0a0ff",
      },
    },
    {
      "name": "Operators",
      "scope": [
        "keyword.operator",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#ff6b7a",
      },
    },
    {
      "name": "Punctuation",
      "scope": [
        "punctuation",
      ],
      "settings": {
        "foreground": "#b0b9fb",
      },
    },
    {
      "name": "Template & Misc",
      "scope": [
        "keyword.other",
        "punctuation.definition.keyword",
      ],
      "settings": {
        "foreground": "#c2c07d",
      },
    },
    {
      "name": "Import, Export, From, Default",
      "scope": [
        "keyword.control.import",
        "keyword.control.export",
        "keyword.control.default",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "Keyword",
      "scope": [
        "keyword",
        "keyword.control",
      ],
      "settings": {
        "foreground": "#c2a9ff",
      },
    },
    {
      "name": "Keyword Operator Logical",
      "scope": [
        "keyword.operator.logical",
        "keyword.operator.bitwise",
        "keyword.operator.comparison",
        "keyword.operator.relational",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#ff7d8a",
      },
    },
    {
      "name": "Tag",
      "scope": "entity.name.tag",
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Tag Punctuation",
      "scope": [
        "punctuation.definition.tag",
      ],
      "settings": {
        "foreground": "#a8bee4",
      },
    },
    {
      "name": "Variables",
      "scope": [
        "variable",
        "support.variable",
      ],
      "settings": {
        "foreground": "#99cc40",
      },
    },
    {
      "name": "Function Arguments",
      "scope": [
        "variable.parameter",
      ],
      "settings": {
        "foreground": "#7a7aff",
      },
    },
    {
      "name": "Object Key",
      "scope": [
        "meta.object-literal.key",
        "entity.name.type.hcl",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Object Property",
      "scope": [
        "variable.other.property",
        "support.variable.property",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Methods",
      "scope": [
        "entity.name.method",
        "variable.function.constructor",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Function Definition",
      "scope": [
        "entity.name.function",
        "variable.function",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Constant, Tag Attribute",
      "scope": [
        "constant.character",
        "constant.escape",
      ],
      "settings": {
        "foreground": "#99cc40",
      },
    },
    {
      "name": "Inherited Class",
      "scope": "entity.other.inherited-class",
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "Class, Support, DOM, etc",
      "scope": [
        "support.class",
        "support.type",
        "support.function",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "Class Name",
      "scope": "entity.name",
      "settings": {
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "CSS Property",
      "scope": [
        "support.type.property-name",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "CSS Class",
      "scope": [
        "entity.other.attribute-name.class",
      ],
      "settings": {
        "foreground": "#99cc40",
      },
    },
    {
      "name": "CSS ID",
      "scope": "entity.other.attribute-name.id",
      "settings": {
        "foreground": "#7fb5ff",
      },
    },
    {
      "name": "CSS Tag",
      "scope": "entity.name.tag.css",
      "settings": {
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "CSS Punctuation",
      "scope": [
        "punctuation.definition.entity",
      ],
      "settings": {
        "foreground": "#a8bee4",
      },
    },
    {
      "name": "CSS at-rules",
      "scope": [
        "keyword.control.at-rule",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "CSS value",
      "scope": "support.constant.property-value",
      "settings": {
        "foreground": "#f59e0b",
      },
    },
    {
      "name": "CSS pseudo selectors",
      "scope": [
        "entity.other.attribute-name.pseudo-class",
        "entity.other.attribute-name.pseudo-element",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "Inserted, Deleted, Changed",
      "scope": [
        "markup.inserted",
        "markup.deleted",
        "markup.changed",
      ],
      "settings": {
        "foreground": "#80f0e6",
      },
    },
    {
      "name": "Regular Expressions",
      "scope": [
        "string.regexp",
        "constant.character.escape",
      ],
      "settings": {
        "foreground": "#b3e666",
      },
    },
    {
      "name": "Decorators",
      "scope": [
        "tag.decorator.js",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "HTML Attributes",
      "scope": [
        "entity.other.attribute-name",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "JSON Key - Level 0",
      "scope": [
        "source.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#9976db",
      },
    },
    {
      "name": "JSON Key - Level 1",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "JSON Key - Level 2",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#7a7aff",
      },
    },
    {
      "name": "JSON Key - Level 3",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "JSON Key - Level 4",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#4dd8f0",
      },
    },
    {
      "name": "JSON Key - Level 5",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#ff6b7a",
      },
    },
    {
      "name": "JSON Key - Level 6",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#f0d440",
      },
    },
    {
      "name": "JSON Key - Level 7",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#f88d7a",
      },
    },
    {
      "name": "JSON Key - Level 8",
      "scope": [
        "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#99cc40",
      },
    },
    {
      "name": "Markdown - Heading",
      "scope": [
        "heading.1.markdown",
        "heading.2.markdown",
        "heading.3.markdown",
        "heading.4.markdown",
        "heading.5.markdown",
        "heading.6.markdown",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Markup - Italic, Bold",
      "scope": [
        "markup.italic",
        "markup.bold",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#bacaf8",
      },
    },
    {
      "name": "Markdown - Link",
      "scope": [
        "markup.underline.link",
        "constant.other.reference.link.markdown",
      ],
      "settings": {
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "Markdown - Fenced Code Block",
      "scope": [
        "markup.fenced_code.block.markdown",
        "markup.inline.raw.string.markdown",
      ],
      "settings": {
        "foreground": "#b3e666",
      },
    },
    {
      "name": "Markup - Quote",
      "scope": "markup.quote",
      "settings": {
        "fontStyle": "italic",
      },
    },
    {
      "name": "React/Vue Components",
      "scope": [
        "entity.name.component",
        "support.class.component",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#f39686",
      },
    },
    {
      "name": "TypeScript Types",
      "scope": [
        "entity.name.type",
        "type.alias",
        "type.parameter",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "GraphQL Schema",
      "scope": [
        "type.name.graphql",
        "field.name.graphql",
      ],
      "settings": {
        "foreground": "#e666b3",
      },
    },
    {
      "name": "Tailwind Classes",
      "scope": [
        "entity.other.attribute-name.class.tailwind",
      ],
      "settings": {
        "foreground": "#4de0d8",
      },
    },
    {
      "name": "React Hooks",
      "scope": [
        "support.function.react-hooks",
        "entity.name.function.hook",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#f43f5e",
      },
    },
    {
      "name": "Testing Frameworks",
      "scope": [
        "support.function.test",
        "entity.name.function.test",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Modern Frameworks",
      "scope": [
        "support.function.solid",
        "support.function.drizzle",
        "support.function.hono",
        "support.function.validation",
        "support.function.query",
        "entity.name.function.resolver",
        "support.function.macro.rust",
        "entity.name.function.go",
        "support.function.styled",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
  ],
  "type": "dark",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme token colors snapshot 1`] = `
[
  {
    "name": "Italics - Comments, Storage, Keyword Flow",
    "scope": [
      "comment",
      "keyword.control.flow",
      "keyword.control.return",
      "storage.modifier",
    ],
    "settings": {
      "fontStyle": "italic",
    },
  },
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "foreground": "#7284a6",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#e0945a",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#bacaf8",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#e98864",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#f88d7a",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#a0a0ff",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ff6b7a",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#b0b9fb",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#c2c07d",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#c2a9ff",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ff7d8a",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "CSS Property",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "CSS ID",
    "scope": "entity.other.attribute-name.id",
    "settings": {
      "foreground": "#7fb5ff",
    },
  },
  {
    "name": "CSS Tag",
    "scope": "entity.name.tag.css",
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "CSS Punctuation",
    "scope": [
      "punctuation.definition.entity",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "CSS at-rules",
    "scope": [
      "keyword.control.at-rule",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "CSS value",
    "scope": "support.constant.property-value",
    "settings": {
      "foreground": "#f59e0b",
    },
  },
  {
    "name": "CSS pseudo selectors",
    "scope": [
      "entity.other.attribute-name.pseudo-class",
      "entity.other.attribute-name.pseudo-element",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "Inserted, Deleted, Changed",
    "scope": [
      "markup.inserted",
      "markup.deleted",
      "markup.changed",
    ],
    "settings": {
      "foreground": "#80f0e6",
    },
  },
  {
    "name": "Regular Expressions",
    "scope": [
      "string.regexp",
      "constant.character.escape",
    ],
    "settings": {
      "foreground": "#b3e666",
    },
  },
  {
    "name": "Decorators",
    "scope": [
      "tag.decorator.js",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "HTML Attributes",
    "scope": [
      "entity.other.attribute-name",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "JSON Key - Level 0",
    "scope": [
      "source.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#9976db",
    },
  },
  {
    "name": "JSON Key - Level 1",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "JSON Key - Level 2",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "JSON Key - Level 3",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "JSON Key - Level 4",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "JSON Key - Level 5",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#ff6b7a",
    },
  },
  {
    "name": "JSON Key - Level 6",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#f0d440",
    },
  },
  {
    "name": "JSON Key - Level 7",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#f88d7a",
    },
  },
  {
    "name": "JSON Key - Level 8",
    "scope": [
      "source.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json meta.structure.dictionary.value.json meta.structure.dictionary.json support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#99cc40",
    },
  },
  {
    "name": "Markdown - Heading",
    "scope": [
      "heading.1.markdown",
      "heading.2.markdown",
      "heading.3.markdown",
      "heading.4.markdown",
      "heading.5.markdown",
      "heading.6.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markup - Italic, Bold",
    "scope": [
      "markup.italic",
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#bacaf8",
    },
  },
  {
    "name": "Markdown - Link",
    "scope": [
      "markup.underline.link",
      "constant.other.reference.link.markdown",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "Markdown - Fenced Code Block",
    "scope": [
      "markup.fenced_code.block.markdown",
      "markup.inline.raw.string.markdown",
    ],
    "settings": {
      "foreground": "#b3e666",
    },
  },
  {
    "name": "Markup - Quote",
    "scope": "markup.quote",
    "settings": {
      "fontStyle": "italic",
    },
  },
  {
    "name": "React/Vue Components",
    "scope": [
      "entity.name.component",
      "support.class.component",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#f39686",
    },
  },
  {
    "name": "TypeScript Types",
    "scope": [
      "entity.name.type",
      "type.alias",
      "type.parameter",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "GraphQL Schema",
    "scope": [
      "type.name.graphql",
      "field.name.graphql",
    ],
    "settings": {
      "foreground": "#e666b3",
    },
  },
  {
    "name": "Tailwind Classes",
    "scope": [
      "entity.other.attribute-name.class.tailwind",
    ],
    "settings": {
      "foreground": "#4de0d8",
    },
  },
  {
    "name": "React Hooks",
    "scope": [
      "support.function.react-hooks",
      "entity.name.function.hook",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#f43f5e",
    },
  },
  {
    "name": "Testing Frameworks",
    "scope": [
      "support.function.test",
      "entity.name.function.test",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Modern Frameworks",
    "scope": [
      "support.function.solid",
      "support.function.drizzle",
      "support.function.hono",
      "support.function.validation",
      "support.function.query",
      "entity.name.function.resolver",
      "support.function.macro.rust",
      "entity.name.function.go",
      "support.function.styled",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 1`] = `"Tokyo Modern"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 2`] = `"dark"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 3`] = `true`;
